php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25888 Crash of php.exe when xpath_eval of a namespace
Submitted: 2003-10-16 11:32 UTC Modified: 2003-10-17 11:58 UTC
From: thomas dot sattler at decon-network dot de Assigned:
Status: Closed Package: DOM XML related
PHP Version: 4CVS-2003-10-16 (stable) OS: All
Private report: No CVE-ID: None
 [2003-10-16 11:32 UTC] thomas dot sattler at decon-network dot de
Description:
------------
When I try to evaluate the namespace of an xpath node php crashes with a segmentation fault.

Reproduce code:
---------------
<?php
$s = '<?xml version="1.0" ?>';
$s .= '<test:foo xmlns:test="http://www.umweltdatenkatalog.de/udk">';
$s .= '<test:bar>abc';
$s .= '</test:bar>';
$s .= '</test:foo>';

$doc = domxml_open_mem($s);
$ctx_p = xpath_new_context($doc);
$namesp = xpath_eval($ctx_p, '//namespace::*');
echo '<pre><br/>';
print_r($doc);
print_r($ctx_p);
print_r($namesp);
echo '</pre>';
?>

Expected result:
----------------
The expected result is an Xpath-Object with
the name "xmlns:namespace-prefix" and the value "namespace-uri". In the example that would be:

name=xmlns:test
value=http://www.umweltdatenkatalog.de/udk

Actual result:
--------------
The php-interpreter causes an programm error and is closed.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-17 11:58 UTC] rrichards@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC