Fix bug #25888 (Crash of php.exe when xpath_eval of a namespace) memleak fix in domxml_node_name keep blanks loading document fix